@@ -1,3 +1,5 @@
+  * doc/runscripts.html: typo; openssh needs absolute path (thx Kevin Berry).
+
 runit 1.3.0
 Sun, 24 Jul 2005 16:50:55 +0000
   * man/runsv.8: typo; no longer document the e control character; clarify
